--- a/GetValueAPI/GetValueAPI/GetValueAPI/GetValueAPI.csproj
+++ b/GetValueAPI/GetValueAPI/GetValueAPI/GetValueAPI.csproj
@@ -27,4 +27,9 @@
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext"/>
   </ItemGroup>
+  <ItemGroup>
+  <PackageReference Include="Azure.Identity" Version="1.*" />
+  <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.*" />
+  </ItemGroup>
+
 </Project>
